--- a/styles/style.css
+++ b/styles/style.css
@@ -5,19 +5,66 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+    background-color: #e8e8e9;
 }
 
-img {}
-.primary-heading{}
-.secondary-heading{}
+img {
+    width: 500px;
+    height: 100%;
+
+
+}
+a{
+    text-decoration: none;
+
+}
+.primary-heading{
+    font-size: 52px;
+    font-weight: 300;
+    text-align: center;
+}
+
+
+.secondary-heading{
+    text-align: center;
+    font-weight: 500;
+    font-size: 32px;
+
+}
+
+.primary-heading,
+.secondary-heading,
+.tertiary-heading {
+    text-transform: uppercase;
+    color: #0e3013;
+}
+
 .tertiary-heading{}
 .description-text{}
-.list {}
-.nav-list{}
-.list-unord{}
+.list {
+}
+.nav-list{
+    width: 100%;
+    text-align: center;
+}
+.unord-list{
+    list-style: none;
+}
 .list-ord{}
 .list-item{}
 .unord-item{}
 .ord-item{}
-.page-link{}
-.list-link{}
+.page-link{
+    display: inline-block;
+    margin-right: 15px;
+}
+.list-link{
+    text-transform: uppercase;
+    font-weight: 700;
+    color:#289944;
+}
+
+.img-container {
+    text-align: center;
+}
